@@ -8,12 +8,10 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
-
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -25,34 +23,27 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     }
 
     @Override
-    protected void doFilterInternal(
-            HttpServletRequest request,
-            HttpServletResponse response,
-            FilterChain filterChain
-    ) throws ServletException, IOException {
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, 
+                                  FilterChain filterChain) throws ServletException, IOException {
+        try {
+            String token = jwtUtil.getTokenFromRequest(request);
+            if (token != null) {
+                Claims claims = jwtUtil.validateAndGetClaims(token).getBody();
+                String email = claims.get("email", String.class);
+                String role = claims.get("role", String.class);
 
-        String token = jwtUtil.getTokenFromRequest(request);
-
-        if (token != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-            Claims claims = jwtUtil.validateAndGetClaims(token);
-
-            String email = claims.get("email", String.class);
-            String role = claims.get("role", String.class);
-
-            UsernamePasswordAuthenticationToken authentication =
+                UsernamePasswordAuthenticationToken authentication = 
                     new UsernamePasswordAuthenticationToken(
-                            email,
-                            null,
-                            List.of(new SimpleGrantedAuthority("ROLE_" + role))
+                        email, 
+                        null, 
+                        Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role))
                     );
-
-            authentication.setDetails(
-                    new WebAuthenticationDetailsSource().buildDetails(request)
-            );
-
-            SecurityContextHolder.getContext().setAuthentication(authentication);
+                SecurityContextHolder.getContext().setAuthentication(authentication);
+            }
+        } catch (Exception e) {
+            // Invalid token, continue without authentication
         }
-
+        
         filterChain.doFilter(request, response);
     }
 }
